--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Hover card fill effect</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="asset/css/style.css">
 
 </head>
 <body>
