--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p><a href="#learn-more">Learn more →</a></p>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="asset/js/script.js"></script>
 
 </body>
 </html>
