--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Hover card fill effect</title>
-  <link rel="stylesheet" href="asset/css/style.css">
+  <link rel="stylesheet" href="asset/style.css">
 
 </head>
 <body>
@@ -56,7 +56,7 @@
     <p><a href="#learn-more">Learn more →</a></p>
 </div>
 <!-- partial -->
-  <script  src="asset/js/script.js"></script>
+  <script  src="asset/script.js"></script>
 
 </body>
 </html>
